[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/ModifiersList.gd" type="Script" id=1]
[ext_resource path="res://Textures/EmptyTile.png" type="Texture" id=2]
[ext_resource path="res://Fonts/normal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/outline_normal_font.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]
GridContainer/constants/hseparation = 15
GridContainer/constants/vseparation = 15

[node name="ModifiersList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 1 )
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExampleTextureRect" type="TextureRect" parent="ScrollContainer/GridContainer"]
visible = false
margin_right = 130.0
margin_bottom = 1905.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExampleDescription" type="Label" parent="ScrollContainer/GridContainer"]
visible = false
margin_top = 145.0
margin_right = 969.0
margin_bottom = 1920.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "test fdsa fdsa fdsa fdsa fdsa fdsa fds afdsa fdsa fd"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExampleLabel" type="Label" parent="ScrollContainer/GridContainer"]
visible = false
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
text = "X 10"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
